--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.toast.galaxy">
+    package="com.example.toast.galaxy"
+    android:versionName="1.0.0.0"
+    android:versionCode="1">
+
 
     <application
 
