--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.toast.galaxy">
+    package="com.example.toast.galaxy"
+    android:installLocation="auto">
 
 
     <application
@@ -12,7 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:fullBackupContent="true"
-
         android:background="#000">
 
         <activity
